# MetaTrawl

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
conda-recipe/: README.md
conda-recipe/metatrawl/: meta.yaml
examples/: workflow.toml
src/metatrawl/: __init__.py  api.py  cache.py  cli.py  config.py  db.py  execution.py  healthcheck.py  logging.py  matrix_hdf5.py  workflows.py
tests/: test_api.py  test_healthcheck.py  test_registry_cli.py  test_workflow_config.py
