[project]
name = "metatrawl"
version = "0.1.6"
description = "Mutable registry and workflow bookkeeping for large ZipStrain/SRA profiling projects."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "duckdb>=1.1",
    "polars>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
metatrawl = "metatrawl.cli:cli"

[tool.poetry]
packages = [{include = "metatrawl", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
